@@ -21,7 +21,7 @@ describe('SEGMENTS CACHE IN REDIS', () => {
 
     expect(await cache.getChangeNumber('mocked-segment') === 1).toBe(true);
 
-    expect(await cache.getChangeNumber('inexistent-segment')).toBe(-1); // -1 if the segment doesn't exist
+    expect(await cache.getChangeNumber('inexistent-segment')).toBe(undefined); // -1 if the segment doesn't exist
 
     await cache.addToSegment('mocked-segment', ['d', 'e']);
 
